# SemTracker---Sp2-project

./: .gitignore  App  CMakeLists.txt  addquestionform.cpp  addquestionform.h  addquestionform.ui  examquestioncard.cpp  examquestioncard.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  questioncard.cpp  questioncard.h  questionstruct.h  semTracker_bn_BD.ts  testsubjectbutton.cpp
cli/: App  check_answer.py  main.cpp  makefile
cli/data/answers/: Fri May 19 12:22:58 2023.txt  Sun May 21 05:54:51 2023.txt  Sun May 21 06:01:18 2023.txt  Sun May 21 06:17:32 2023.txt
cli/data/questions/: Fri May 19 12:22:58 2023.txt  Sun May 21 05:54:51 2023.txt  Sun May 21 06:01:18 2023.txt  Sun May 21 06:17:32 2023.txt
cli/data/subjects/: Sun May 21 05:54:51 2023.txt
cli/utils/: colors.cpp  colors.h  utils.cpp  utils.h
gui/: CMakeLists.txt  examquestioncard.h  mainwindow.cpp  mainwindow.h  testsubjectbutton.h
semTracker-gui/: CMakeLists.txt  examquestioncard.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
utils/: utils.cpp  utils.h
